--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Actividad de las funciones 03 Mayo del 2022</title>
     <script src="main.js"></script>
 </head>
 <body>
     <h1>Ver la consola de nevegador 'F12'</h1>
+
+    
 </body>
 </html> 
